--- a/index.qmd
+++ b/index.qmd
@@ -308,12 +308,21 @@ ggplot(df, aes(x = Median_Household_Income, fill=Median_Household_Income)) +
 
 ## Methods
 
-This is where we will write the method for Cox Proportional Dataset. 
+The Cox Proportional Hazard Model is a widely used semiparametric survival analysis method that provides a flexible framework for modeling the hazard rate in the presence of right-censored data. Right-censored data is a type of data where the event of interest like death or failure has not occurred for some of the subjects int he study by the end of observation period. Thus, the exact event time is unknown or not observed for these subjects. In this model, the hazard rate at any time point is expressed as the product of a baseline hazard function, denoted as λ0(t) and an exponential function of a linear combination of covariates. 
+
+Mathematically, the Cox model can be defined as: 
 
 $$
-M_n(x) = \sum_{i=1}^{n} W_n (X_i) Y_i  \tag{1}
-$$ $W_n(x)$ is the sum of weights that belongs to all real numbers.
-Weights are positive numbers and small if $X_i$ is far from $x$.
+λ(t) = λ0(t) * exp(β₁X₁ + β₂X₂ + ... + βₖXₖ)
+$$ 
+This is where: 
+$λ(t)$ represents the hazard rate at time t.
+$λ0(t)$ is the baseline hazard function, representing the hazard in the absence of covariates.
+$β₁, β₂, ..., βₖ$ are coefficients associated with covariates$ X₁, X₂, ..., Xₖ,$ respectively.
+
+The model assumes that the effect of the covariates on the hazard rate is proportional over time thus the name 'proportional hazards'. The hazard ratio between two individuals remains constant over time if one individual's covariate values are a constant factor of the other's. 
+
+The key advantage of the Cox model is that it doesn't make specific assumptions about the shape of the hazard function. This makes it useful for various applications as seen in the introduction. It relies on partial likelihood estimation to estimate the coefficients $β₁, β₂, ..., βₖ$.It is important to verify the proportional hazards assumption, consider potential confounders, and address issues such as censoring and collinearity in the data. 
 
 
 ## Analysis and Results
@@ -333,6 +342,7 @@ The hazard ratio (exp(coef)) for "Gender" is 1.106. This means that males (coded
 The p-value ("< 2e-16") for "Gender" is very low, indicating that the hazard ratio is statistically significant. This means that "Gender" (with females as the reference) is associated with a significant difference in survival, and that difference favors females.
 
 ### Statistical Modeling
+
 ```{r, warning=FALSE, echo=TRUE}
 ## not filtering on death only to see what is associated with higher risk of death compared to those that didn't die
 df$Gender <- ifelse(df$Sex == "Female", 0, 1)
