--- a/index.qmd
+++ b/index.qmd
@@ -387,7 +387,14 @@ kable(table_data,
 
 ```
 
-The model's coefficient estimates and hazard ratios demonstrate the magnitude and direction of the influence of each covariate on survival. When we look at the Cancer group, the Cox model indicated that the type of cancer a person  had was critical determinate of survival. Based on our results, colorectal and lung cancer were associated with hazard ratios close to .69. When examining the race category there was also substantial effect on survival. For the category under Black and Pacific Islander, the hazard ratios were approximately 1.36 and 1.19, respectively. This indicates an elevated risk of experiencing the event. For the sex category, we found that males face a 2.33 times higher risk of experiencing the event compared to females. For age, there was a 1.03 hazard ration, implying that there was a 3% increase in the hazard for each one-year increment in age. In the above mode, we found the factors that affect survival in the data set. 
+The model's coefficient estimates and hazard ratios demonstrate the magnitude and direction of the influence of each covariate on survival.
+Breast Cancer displays a hazard ratio of approximately 15.32, indicating individuals with breast cancer face around 15.32 times higher risk of death compared to those with "Other" cancer types, holding other variables constant. Similarly, Pancreatic Cancer exhibits a hazard ratio of 14.17, signifying a notably elevated risk of mortality.
+Within race categories, Asian and Other/Miscellaneous designations showcase hazard ratios slightly below 1, suggesting marginally lower hazards (or risks) of death compared to the reference group (White). Conversely, Black and Pacific Islander categories demonstrate hazard ratios slightly above 1, implying slightly elevated hazards (or risks) of death compared to the White individuals.
+Males exhibit a hazard ratio of approximately 2.33, indicating a 2.33 times higher risk of death compared to females, when other variables are held constant. Each one-unit increase in age corresponds to a 3% increase in the hazard (or risk) of death, holding other factors constant.
+
+Below we check if the proportional hazards assumption holds true for each factor in the Cox model. This assumption is extremely important in survival analysis because it suggests that the influence of factors stays the same over time. The proportional hazards assumption implies that the effect of a variable (like gender, age) on the hazard (or risk) of an event (such as death) remains constant or proportional over different durations or time periods.
+
+For example, if comparing two groups (e.g., males vs. females), the proportional hazards assumption suggests that the ratio of their risks of experiencing the event (like death) remains the same throughout the observation period. This implies that the effect of being male (compared to being female) on the risk of the event doesn't change over time.
 
 ```{r, warning=FALSE, echo=TRUE}
 cox_residuals <- residuals(cox_model, type = "martingale")
@@ -395,7 +402,7 @@ summary(cox_residuals)
 cox.zph_result <- cox.zph(cox_model)
 cox.zph_result
 ```
-
+All factors, except for age, have an extremely small p-value suggesting that there is a violation of the proportional hazards assumption for all of these variables, including Sex but to a lesser extent. This suggests that the effects of these variables on survival might change over time, which could impact the accuracy of the Cox proportional hazards model's predictions. 
 
 
 In the model below, we took our data and filtered on deceased patients. Similar to above, we used deceased as the response variable and cancer group and gender as our predictive variable. The table below shows the results of our model. 
